se modifica error
se arregla error de campo telefono

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <label for="direccion">Dirección:</label>
     <input type="text" id="direccion" name="direccion" required><br>
 
-    <label for="telefonoFijo">Teléfono Fijo:</label>
+    <label for="telefonoFijo">Teléfono Fijos:</label>
     <div>
         <span><input type="tel" id="codigoAreaFijo" name="codigoAreaFijo" pattern="[0-9]{3}" placeholder="011" required></span>
         <span><input type="tel" id="numeroFijo" name="numeroFijo" pattern="[0-9]{8}" placeholder="22222222" required></span>
